# IDEAS

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  IDEAS.mk  LEARNING.mk  Makefile  README.md  cargo_toml.cmake  extract_info.cmake  pyproject.toml
docker/: ideas.Dockerfile
examples/hello_world/project/: CMakeLists.txt
examples/hello_world/project/include/: constants.h
examples/hello_world/project/src/: main.c
examples/hello_world/test_case/: CMakeLists.txt
examples/hello_world/test_case/include/: constants.h
examples/hello_world/test_cases/: test.json
examples/hello_world/test_vectors/: test.json
scripts/: run_experiment.sh  test_log_stats.sh
src/ideas/: __init__.py  __main__.py  adapters.py  agents.py  ast.py  ast_rust.py  cmake.py  convert_tests.py  cover.py  init.py  logging.py  ltu.py  model.py  repair.py  tools.py  translate.py  translate_recurrent.py  translate_symbol.py  treesitter.py  utils.py  wrapper.py
src/ideas/init/: consolidate.py  crate.py
src/ideas/learn/: translate.py
test/: test_adapters.py  test_clang.py  test_code_processing.py  test_convert_json_to_rust.py  test_extract_code_from_tu.py  test_extract_rust.py  test_graph_deps.py  test_ltu.py  test_no_mangle.py  test_rename_statics.py  test_rust_ast.py  test_templating.py  test_tools.py  test_treesitter.py
test/fixtures/ast/: formatting.c.i  signatures.c  signatures.rs
test/fixtures/ast/data_structures/: CMakeLists.txt
test/fixtures/ast/data_structures/include/: lib.c  lib.h
test/fixtures/ast/data_structures/src/: main.c  main.c.i
test/fixtures/ast/fn_calling/include/: lib.h
test/fixtures/ast/fn_calling/src/: main.c  main.c.i
test/fixtures/ast_rust/: functions.rs  no_mangle.rs
test/fixtures/code_preprocessing/: expected.c.i  input.c.i
test/fixtures/compile/: clippy.rs  echo_123  echo_stdin  hello_world_bad.c  hello_world_bad.rs
test/fixtures/templating/: modified_invalid.rs  modified_valid.rs  template.rs
test/fixtures/text_processor/: Cargo.toml
test/fixtures/text_processor/json_test_cases/: test1.json  test2.json  test3.json  test4.json  test5.json  test6.json
test/fixtures/text_processor/src/: main.rs
tools/crateify/: Cargo.toml  README.md
tools/crateify/src/: main.rs
