[project]
name = "ideas"
dynamic = ["version"]
description = "Improved Decoding and Equivalence Automated testing at Scale"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "~=3.14.0"

dependencies = [
    "clang==21.1.7",
    "dspy==3.1.2",
    "hydra-core",
    "tree-sitter==0.25.2",
    "tree-sitter-rust==0.24.0",
]

[dependency-groups]
dev = [
    "basedpyright==1.29.4",
    "pre-commit==4.2.0",
    "pytest==8.4.0",
    "ruff==0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/ideas/__init__.py"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
deprecateTypingAliases = true
reportDeprecated = true
reportPrivateImportUsage = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 96

[tool.uv.sources]
hydra-core = { git = "https://github.com/facebookresearch/hydra.git", rev = "1ac07c7c001f73b2a6cdbc4c2ad700287cdf592c" }
