[project]
name = "ideas"
version = "2026.3"
description = "Improved Decoding and Equivalence Automated testing at Scale"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "~=3.13.0"

dependencies = [
    "clang==21.1.7",
    "dspy==3.1.2",
    "hydra-core==1.3.2",
    "tree-sitter==0.25.2",
    "tree-sitter-rust==0.24.0",
]

[dependency-groups]
dev = [
    "basedpyright==1.29.4",
    "pre-commit==4.2.0",
    "pytest==8.4.0",
    "ruff==0.11.13",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.12.0"]
build-backend = "uv_build"

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
deprecateTypingAliases = true
reportDeprecated = true
reportPrivateImportUsage = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 96

[tool.uv]
# Ensure that the setuptools v81.0.0 is used whenever a package has a build dependency
# on setuptools.
build-constraint-dependencies = ["setuptools==81.0.0"]
